<resources>
    <string name="app_name">Restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cusine">Cusine</string>
    <string name="category">Category</string>
    <string name="dosa">Dosa</string>
    <string name="price">Price:</string>
    <string name="dishname">dishname</string>
    <string name="dollar">$</string>
    <string name="cuisine_category">Cuisine category</string>
    <string name="biriyani">Biriyani</string>
    <string name="rs_250">Rs.250</string>
    <string name="rs_180">Rs.180</string>
    <string name="veg_patti">Veg Patti</string>
    <string name="bira_ramen">Bira Ramen</string>
    <string name="rs_150">Rs.150</string>
    <string name="ramen">Ramen</string>
    <string name="view_cart">View Cart</string>
    <string name="s_no">s.no</string>
    <string name="dish">Dish</string>
    <string name="count">count</string>
    <string name="amount">amount</string>
    <string name="net_total">Net Toatal</string>
    <string name="net_total1">Net Total</string>
    <string name="rs">RS</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
</resources>