<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_gradient2"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            >

            <TextView
                android:id="@+id/sno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="#94040303"
                android:text="@string/s_no"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dish_cart"
                android:layout_width="wrap_content"
                android:textColor="#F44336"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/fingerpaint_regular"
                android:text="@string/dish"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/sno"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="128dp"
                android:text="@string/rs_150"
                android:textColor="#92000000"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/count_cart_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:textColor="@color/black"
                android:fontFamily="@font/fingerpaint_regular"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/dish_cart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amount_cart_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/amount"
                android:textColor="#C3000000"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/price_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/price_cart"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>