<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="450dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:elevation="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dishname" />

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="300dp"
                android:layout_height="283dp"
                android:layout_gravity="center"
                android:cropToPadding="true"

                android:src="@drawable/indiancuisine" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/price_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dollar"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right">
                <TextView
                    android:id="@+id/count_in_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="count"
                    android:layout_gravity="center"/>
                <androidx.constraintlayout.utils.widget.ImageFilterButton
                    android:id="@+id/add_to_cart_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/purple_500"
                    android:src="@drawable/add_to_cart"
                    app:tint="#ffff" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:elevation="20dp"-->
<!--        android:layout_marginTop="145dp"-->
<!--        android:layout_marginStart="145dp"-->

<!--        app:layout_constraintHorizontal_bias="0.544"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->
<!--        -->

<!--                <TextView-->
<!--                    android:id="@+id/remove_dish"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text=" - " />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="count"-->
<!--              />-->

<!--                <TextView-->
<!--                    android:id="@+id/add_dish"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text=" + "-->
<!--                />-->

<!--    </LinearLayout>-->


    <!--    <TextView-->
<!--        android:id="@+id/category_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/category"-->
<!--        android:elevation="30dp"-->
<!--        android:textSize="50dp"-->
<!--        android:fontFamily="@font/fingerpaint_regular"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/cardView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:textColor="#F44336"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="@+id/cardView"-->
<!--        app:layout_constraintTop_toTopOf="@+id/cardView"/>-->
<!--    <TextView-->
<!--        android:id="@+id/category_name2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/category"-->
<!--        android:elevation="30dp"-->
<!--        android:textSize="47dp"-->
<!--        android:fontFamily="@font/fingerpaint_regular"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/cardView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:textColor="#FFEB3B"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="@+id/cardView"-->
<!--        app:layout_constraintTop_toTopOf="@+id/cardView"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>